EtlAdapter to package extensions to LinkETL #13

--- a/RELEASE-NOTES.txt
+++ b/RELEASE-NOTES.txt
@@ -4,6 +4,7 @@ Release 1.1
 #9 Matcher refactoring
 #10 KeyBuilder refactoring - renaming to KeyMapAdapter
 #11 Rename MatchingTaskBuilder.matchByPrimaryKey to matchById
+#13 EtlAdapter to package extensions to LinkETL
 
 Release 1.0 2014-08-13
 
