--- a/RELEASE-NOTES.txt
+++ b/RELEASE-NOTES.txt
@@ -8,7 +8,7 @@ Release 1.1
 #14 Rename "transform" package to "load"
 #15 Rename Matchers to Mappers
 #16 ClasspathExtractorConfigLoader incorrectly resolves resource URLs
-
+#17 Disallow ID updates for auto-generated IDs
 
 Release 1.0 2014-08-13
 
