--- a/RELEASE-NOTES.txt
+++ b/RELEASE-NOTES.txt
@@ -11,6 +11,7 @@ Release 1.1
 #17 Disallow ID updates for auto-generated IDs
 #18 JdbcExtractorFactory - trim SQL and other properties comping from XML
 #19 Task update count includes related objects
+#20 ETL fails to reset non-null properties to NULL on update
 
 Release 1.0 2014-08-13
 
