A default IConnectorFactory using target DataSource for source #21
    * trying to get a DataSource from Cayenne
    * changing package locations for some connector(factory) classes
      to better reflect their position in the framework
    * parameterizing IConnectorFactory. Seems logical that each factory can only create
      one broad category of connectors
    * DataSourceConnectorFactory - a factory based on a map of DataSources
    * a unit test for the non-default behavior of ConnectorService
    * refactoring JdbcConnector into an interface, so that we could have multiple impls.

--- a/RELEASE-NOTES.txt
+++ b/RELEASE-NOTES.txt
@@ -12,6 +12,7 @@ Release 1.1
 #18 JdbcExtractorFactory - trim SQL and other properties comping from XML
 #19 Task update count includes related objects
 #20 ETL fails to reset non-null properties to NULL on update
+#21 A default IConnectorFactory using target DataSource for source
 
 Release 1.0 2014-08-13
 
