--- a/RELEASE-NOTES.txt
+++ b/RELEASE-NOTES.txt
@@ -13,6 +13,7 @@ Release 1.1
 #19 Task update count includes related objects
 #20 ETL fails to reset non-null properties to NULL on update
 #21 A default IConnectorFactory using target DataSource for source
+#22 NPE on syncing nullable FK 
 
 Release 1.0 2014-08-13
 
