--- a/RELEASE-NOTES.txt
+++ b/RELEASE-NOTES.txt
@@ -1,4 +1,4 @@
-Release 1.1
+Release 1.1 2014-10-23
 
 #8 'MatchingTaskBuilder.matchBy' to take Property<?> instead of String
 #9 Matcher refactoring
