--- a/RELEASE-NOTES.txt
+++ b/RELEASE-NOTES.txt
@@ -1,3 +1,7 @@
+Release 1.3
+
+#26  Refactoring ETL stack to expose processing chain in the object design
+
 Release 1.2 2014-12-08
 
 #24 Upgrade Cayenne dependency to 4.0.M2.1ab1caa
