--- a/RELEASE-NOTES.txt
+++ b/RELEASE-NOTES.txt
@@ -1,6 +1,7 @@
 Release 1.3
 
-#26  Refactoring ETL stack to expose processing chain in the object design
+#26 Refactoring ETL stack to expose processing chain in the object design
+#27 Upgrade to official Cayenne 4.0.M2
 
 Release 1.2 2014-12-08
 
