--- a/RELEASE-NOTES.txt
+++ b/RELEASE-NOTES.txt
@@ -1,4 +1,6 @@
-Release 1.3
+Release 1.4
+
+Release 1.3 2015-04-09
 
 #23 Support for "delete" of targets missing in the source
 #25 Parameterized queries for Extractors
