--- a/RELEASE-NOTES.txt
+++ b/RELEASE-NOTES.txt
@@ -3,6 +3,7 @@ Release 1.4
  #1 XML extractor support
 #36 CSV extractors
 #43 Deprecate/remove explicit relationship mapping from CreateOrUpdateBuilder
+#44 Straighten mapping by ID
 #46 Cayenne upgrade to 4.0.M3.debfa94
 
 Release 1.3 2015-04-09
