--- a/RELEASE-NOTES.txt
+++ b/RELEASE-NOTES.txt
@@ -7,6 +7,7 @@ Release 1.4
 #44 Straighten mapping by ID
 #46 Cayenne upgrade to 4.0.M3.debfa94
 #50 XML Schema for extractor configs
+#51 Normalize 'sources' map keys
 
 Release 1.3 2015-04-09
 
