--- a/RELEASE-NOTES.txt
+++ b/RELEASE-NOTES.txt
@@ -9,6 +9,7 @@ Release 1.4
 #49 Matchers must handle expression invariants in Rows
 #50 XML Schema for extractor configs
 #51 Normalize 'sources' map keys
+#52 Descriptor versioning
 
 Release 1.3 2015-04-09
 
