--- a/RELEASE-NOTES.txt
+++ b/RELEASE-NOTES.txt
@@ -12,6 +12,7 @@ Release 1.4
 #51 Normalize 'sources' map keys
 #52 Descriptor versioning
 #53 FileExtractorModelLoader - a file-based IExtractorModelLoader
+#54 Rename LinkETL to LinkMove
 
 Release 1.3 2015-04-09
 
