--- a/RELEASE-NOTES.txt
+++ b/RELEASE-NOTES.txt
@@ -4,6 +4,7 @@ Release 1.6
 #55 DeleteTask - a new callback between getting source keys and matching them against targets
 #64 Allow mapping source columns to non-persistent target properties
 #73 Reloadable extractors do not reload
+#75 JSON extractor
 
 Release 1.5
 
