--- a/RELEASE-NOTES.txt
+++ b/RELEASE-NOTES.txt
@@ -5,6 +5,7 @@ Release 1.6
 #64 Allow mapping source columns to non-persistent target properties
 #73 Reloadable extractors do not reload
 #75 JSON extractor
+#79 Upgrade to Cayenne 4.0.M3
 
 Release 1.5
 
