Implement parent access in JsonPath #89

--- a/RELEASE-NOTES.txt
+++ b/RELEASE-NOTES.txt
@@ -6,6 +6,7 @@ Release 1.7
 #86 XmlExtractor should treat attribute's source name as XPath expression
 #87 JsonExtractor should treat attribute's source name as JsonPath expression
 #88 JdbcNormalizer for SQL Integer
+#89 Implement parent access in JsonPath
 
 Release 1.6
 
