--- a/RELEASE-NOTES.txt
+++ b/RELEASE-NOTES.txt
@@ -14,6 +14,7 @@ Release 1.7
 #94 Do not create TargetToOnePropertyWriter for the master side of a to-one relationship
 #95 Switch to Commons CSV parser
 #97 Split CSV module out of LM core
+#99 Logging API cleanup
 
 Release 1.6
 
