--- a/RELEASE-NOTES.txt
+++ b/RELEASE-NOTES.txt
@@ -3,6 +3,7 @@ Release 1.8
 #104 Boolean JDBC normalizer fails to normalize a java.lang.Boolean 
 #106 Listener for the after targets committed stage
 #107 Switch to Java 8
+#108 Change license from BSD to Apache 2.0
 
 Release 1.7
 
