--- a/RELEASE-NOTES.txt
+++ b/RELEASE-NOTES.txt
@@ -1,3 +1,7 @@
+Release 2.2
+
+#113 Upgrade Cayenne to 4.0.M4 to fix overlapping transactions 
+
 Release 2.1
 
 #112 API for external access to DI-managed entities
