--- a/RELEASE-NOTES.txt
+++ b/RELEASE-NOTES.txt
@@ -2,6 +2,7 @@ Release 2.3
 
 #122 Respect original types of JSON source row attributes
 #123 String normalizer
+#128 Support java.math big numeric types in Integer and Long normalizers
 
 Release 2.2
 
