--- a/RELEASE-NOTES.txt
+++ b/RELEASE-NOTES.txt
@@ -1,6 +1,7 @@
 Release 2.4
 
 #132 @AfterTargetsMapped listeners are not invoked in CreateOrUpdate tasks
+#134 ValueConverter for enums
 #135 Refactoring JdbcNormalizer to ValueConverter
 
 
