The use of String.replace(..) in PathNormalizer causes massive Pattern creation #143

--- a/RELEASE-NOTES.txt
+++ b/RELEASE-NOTES.txt
@@ -1,3 +1,7 @@
+Release 2.5
+
+# 143 The use of String.replace(..) in PathNormalizer causes massive Pattern creation
+
 Release 2.4
 
 #101 Create a URLExtractorModelLoader
